src/objects/position__c.object
<CustomObject>
    <description>This object stores information about the open job positions at our company</description>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>test_field1_for_github__c</fullName>
        <label>test field1 for github</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_field_for_github__c</fullName>
        <label>test field for github</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>